app/assets/styles/base/advertising.scss
@import 'globals';

/**
 * AdTech ad content
 * Note: Added inside <div>s with by ad script
 */
.ad * {
  box-sizing: content-box;
}

.ad a {
  display: block;
  // scss-lint:disable ImportantRule
  margin-bottom: 0 !important;
}

.ad img,
.ad object {
  @include media('>desktop-laptop') {
    display: block;
  }
}

/**
 * Skyscraper Ad sidebar
 * 1. Hidden until there is space for it
 * 2. Fixed to the right-hand-side
 */
.ad--skyscraper {
  @include media('<=advertising-skyscraper') {
    display: none; /* 1 */
  }

  @include media('>advertising-skyscraper') {
    position: absolute; /* 2 */
    width: 300px;
    top: auto;
    right: 10px;
    height: 600px;
  }
}

// scss-lint:disable SelectorFormat, IdSelector

/**
 * Advertising slots
 * 1. Center all content
 */
#rectangle,
#content_board,
#top_board,
#bottom_board {
  @include edges('pull');

  text-align: center; /* 1 */

  @include media('>tablet-landscape') {
    margin-left: 0;
    margin-right: 0;
  }

  > div,
  > a,
  > img,
  > object {
    display: inline-block; /* 1 */
    text-align: left;
  }
}

/**
 * Content Board advert
 * 1. Explicit width required as flexbox also applied in layout.scss
 */
#content_board {
  @include media('<=mobile-portrait') {
    width: calc(100% + #{(2 * $container-spacing)}); /* 1 */
  }

  @include media('>mobile-portrait') {
    width: calc(100% + #{(4 * $container-spacing)}); /* 1 */
  }
}

/**
 * Top Board advert
 */
#top_board {
  @include media('<=mobile-portrait') {
    margin-bottom: 30px;
  }

  @include media('>mobile-portrait') {
    margin-bottom: 40px;
  }
}

/**
 * Bottom Board advert
 * Note: Never add bottom margin due to sticky skyscraper
 */
#bottom_board {
  @include media('<=mobile-portrait') {
    margin-top: 30px;
  }

  @include media('>mobile-portrait') {
    margin-top: 40px;
  }
}

/**
 * Rectangle Advert
 * Note: Inserted with JS into article body
 */
#rectangle {
  margin-bottom: 30px;

  @include media('>float-enrichments') {
    float: right;
    margin-left: 30px;
    margin-right: 0;
  }
}

/**
 * Rectangle Adverts first in article
 */
#rectangle:first-child {
  margin-top: 0;
}

/**
 * Rectangle Adverts last in article
 */
#rectangle:last-child {
  float: none;
  margin-left: auto;
  margin-right: auto;
}

/**
 * Rectangle Adverts that appear lower than the sidebar
 */
#rectangle.is-below-sidebar:not(:last-child) {
  @include media('>desktop-laptop') {
    margin-right: -200px;
  }
}

/**
 * Hacking layout for when a rectangle ad immediately follows a floated enrichment
 */
.enrichment--aside + div #rectangle:first-child {
  @include media('>float-enrichments') {
    float: none;
    text-align: left;
    position: relative;
    top: 6px;
    margin-left: 0;
    margin-right: -50px;
  }
}

// scss-lint:enable SelectorFormat, IdSelector

